# xfce-config

./: .gitignore  Cargo.toml  rust-toolchain.toml
config-types-proc-macro/: Cargo.toml
config-types-proc-macro/src/: lib.rs
src/: cfg.rs  channel.rs  config.rs  dbus.rs  diff.rs  general.rs  gsettings.rs  gtk.rs  json.rs  lib.rs  main.rs  panel.rs  serde.rs  xfconf.rs
