[workspace]
resolver = "2"
members = [
    ".",
]

[package]
name = "xfce-config"
version = "0.2.2"
authors = ["Daniel Beckwith <djbsnx@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.43"
cfg-if = "1.0.0"
dirs2 = "3.0.1"
gio = "0.14.6"
glib = "0.14.5"
im = "15.0.0"
quick-xml = "0.22.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
structopt = "0.3.23"

[dev-dependencies]
maplit = "1.0.2"
