[workspace]
resolver = "2"
members = [
    ".",
]

[package]
name = "xfce-config"
version = "0.4.4"
authors = ["Daniel Beckwith <djbsnx@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.57"
cfg-if = "1.0.0"
chrono = "0.4.19"
dirs2 = "3.0.1"
gio = "0.15.11"
glib = "0.15.11"
im = "15.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
structopt = "0.3.26"

[dev-dependencies]
maplit = "1.0.2"
