[workspace]
resolver = "2"
members = [
    ".",
]

[package]
name = "xfce-config"
version = "0.4.4"
authors = ["Daniel Beckwith <djbsnx@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cfg-if = "1.0.1"
chrono = "0.4.41"
dirs2 = "3.0.1"
gio = "0.20.12"
glib = "0.20.12"
im = "15.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
structopt = "0.3.26"

[dev-dependencies]
maplit = "1.0.2"
